# permutations_by_perplexity

./: .gitignore  EDA.ipynb  README.md  ibis.ipynb  ibis_sa_2.ipynb  ibis_sa_3.ipynb  metric.py  pyproject.toml
baselines/: 1_random.ipynb  2_brute_force.ipynb  3_greedy.ipynb  4_beam_search.ipynb  5_simulated_annealing.ipynb
