[tool.poetry]
name = "ods-nlp-project"
version = "0.1.0"
description = ""
authors = ["Iuliia Fokina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
torch = "^2.5.1"
transformers = "^4.47.0"
umap = "^0.1.1"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
